# vuln-scanner

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements1.txt  start_server.sh
app/: main.py
app/core/: config.py  database.py
app/models/: models.py  serializers.py
app/routers/v1/: applications.py  dependencies.py
app/services/: parser.py  scanner.py
